force-app/main/default/objects/Chat__c/Chat__c.object-meta.xml
<CustomObject>
    <label>Chat</label>
    <nameField>
        <label>Chat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>