force-app/main/default/objects/Chat__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chats</relationshipLabel>
    <relationshipName>Chats</relationshipName>
    <type>Lookup</type>
</CustomField>