force-app/main/default/objects/Chat__c/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <label>ConversationId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>