force-app/main/default/objects/Chat__c/fields/MessageHistory__c.field-meta.xml
<CustomField>
    <fullName>MessageHistory__c</fullName>
    <label>MessageHistory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>