force-app/main/default/objects/Chat__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <label>MessageId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>